# lua-s6ftrig

./: CMakeLists.txt  README.md  s6ftrig-0.0.2-1.rockspec  s6ftrig.c  test.sh
test/: trig.lua
test/svc/sv1/: finish  run
test/svc/sv2/: finish  run
